<resources>
    <string name="app_name">NewPos</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Continue">Continue</string>
    <string name="Options">Options</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="My_Profile">My Profile</string>
    <string name="Profile">Profile</string>
    <string name="Jobs">Jobs</string>
    <string name="Back">Back</string>
    <string name="Applications">Applications</string>
    <string name="More">More</string>
    <string name="Home">Home</string>
    <string name="SeeProfile">See Profile</string>
    <string name="SeeCV">See CV</string>
    <string name="EditCV">Edit CV</string>
    <string name="CV">CV</string>
    <string name="Education">Education</string>
    <string name="JobExperience">Job Experience</string>
    <string name="Skills">Skills</string>
    <string name="Language">Language</string>
    <string name="Edit">Edit</string>
    <string name="Next">Next</string>
    <string name="Add">Add</string>
    <string name="EditName">Editar nombre</string>
    <string name="EditDates">Editar fechas </string>
    <string name="EditDescripcion">Editar descripcion</string>
    <string name="EditHability">Editar habilidad</string>
    <string name="Save">Guardar </string>
    <string name="Cancel">Cancelar</string>
    <string name="Name">Name</string>
    <string name="startDate">Fecha de Inicio</string>
    <string name="endDate">Fecha de finalizacion</string>
    <string name="Description">Descripcion</string>
    <string name="MoreInformation">More Information</string>
    <string name="Apply">Apply</string>
    <string name="PenddingAppliances">Pendding Appliances</string>
    <string name="AcceptedAppliances">Postulaciones Aceptadas</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="Log_Out">Cerrar Sesion</string>
    <string name="About">About</string>
    <string name="Delete">Delete</string>
    <string name="Tittle">Tittle</string>
    <string name="Hability">Habilidad</string>
    <string name="CurriculumVitae">Curriculum Vitae</string>
    <string name="AddEstudios">Añadir estudios</string>
    <string name="AddExperience">Añadir experiencia</string>
    <string name="AddSkill">Añadir skill</string>
    <string name="AddIdioma">Añadir idioma</string>
    <string name="Congratulation">Congratulation!</string>
    <string name="Postulation">Su postulación de NOMBRE COMPANIA ha sido realizada con exito!</string>
    <string name="Postulations">Postulaciones</string>
    <string name="Postulation1">Su postulación de </string>
    <string name="Postulation2"> ha sido realizada con exito!</string>
    <string name="BackContinue">Vuelva atras para continuar</string>
    <string name="AcceptPostulations">Postulaciones aceptadas</string>
    <string name="RequestPostulations">Postulaciones pendientes</string>
    <string name="DeniedPostulations">Postulaciones rechazadas</string>
    <string name="Sorry">Lo Sentimos</string>
    <string name="PostulationRechazada">Su postulación de NOMBRE COMPANIA ha sido rechazada.</string>
    <string name="PostulationRechazada1">Su postulación de</string>
    <string name="PostulationRechazada2">ha sido rechazada.</string>
    <string name="SorryPostulaciones">No tiene postulaciones aceptadas por el momento.</string>
    <string name="SorryPostulaciones1">No tiene postulaciones pendientes por el momento.</string>

    <string name="SignOut">Sign Out</string>
    <string name="UploadPicture">Subir imagen</string>
    <string name="EditProfilePicture">Editar foto de perfil</string>
    <string name="ChoseNewProfilePicture">Elegir nueva foto</string>

    <string name="text1">What do you want, Login or Register?
        If you want to Start Session, press above.
        If you want to register click below.
        If you have forgotten your password click in the middle.</string>
    <string name="text2">Enter your email. To continue click below.</string>
    <string name="text3">Please enter your password. To log in press below.</string>
    <string name="text4">Enter your name. To continue click below. To return press up.</string>
    <string name="text5">Enter your lastname. To continue click below. To return press up.</string>
    <string name="text6">Enter your email. To continue click below. To return press up.</string>
    <string name="text7">Enter your birth date. To continue click below. To return press up.</string>
    <string name="text8">Enter your nacionality. To continue click below. To return press up.</string>
    <string name="text9">Enter your residence country. To continue click below. To return press up.</string>
    <string name="text10">Enter your state/provincy. To continue click below. To return press up.</string>
    <string name="text11">Enter your street. To continue click below. To return press up.</string>
    <string name="text12">Enter your street adress. To continue click below. To return press up.</string>
    <string name="text13">Enter your cellphone number. To continue click below. To return press up.</string>
    <string name="text14">Enter your telephone number. To continue click below. To return press up.</string>
    <string name="text15">Enter your password. To continue click below. To return press up.</string>
    <string name="text16">Enter again your password. To continue click below. To return press up.</string>
    <string name="text17">Tenes registro de discapacidad? Si tiene uno pulse abajo a la izquierda, si no pulse abajo a la derecha. Para volver atras pulse arriba. </string>
    <string name="text18">Subi una foto de tu certificado de discapacidad. Para hacerlo pulse en el medio de la pantalla. Si desea omitir este paso pulse abajo. </string>
    <string name="text19">Cuentanos acerca de tu discapacidad. Para finalizar, pulse abajo.  Para volver atras pulse arriba. </string>
    <string name="text20"> Para ir a "Mi perfil" pulse arriba a la izquierda. Para ir a "Trabajasos" pulse arriba a derecha. Para ir a "Postulaciones" pulse abajo a la izquierda. Para ir a "Más" pulse abajo a la derecha.</string>
    <string name="text21"> Para ver tu perfil pulse arriba de la pantalla. Para ver tu curriculum pulse abajo de la pantalla. Para ir al inicio pulse en el medio de la pantalla. </string>
    <string name="text22">Para volver atras pulse abajo. </string>
    <string name="text23">Para volver atras pulse abajo. Para editar el curriculum pulse arriba. </string>
    <string name="text24">Para editar educacion pulse arriba a la izquierda. Para editar experiencia laboral pulse arriba a la derecha. Para editar skills pulse abajo a la izquierda. Para editar idiomas pulse abajo la derecha. Im Paravolver atras pulse en el medio </string>
    <string name="text25">Para editar el item pulse arriba a la izquierda. Para ir al siguiente item pulse arriba a la derecha. Para ir al anterior item pulse abajo a la izquierda. Para añadir un item pulse abajo a la derecha. Para ir atras pulse en el medio. </string>
    <string name="text26">Para continuar pulse abajo.</string>
    <string name="text27">Para añadir pulse abajo.</string>
    <string name="text271">Ingrese del 1 al 10, el nivel de habilidad. Para añadir pulse abajo.</string>
    <string name="text272">Ingrese nivel de habilidad del idioma. Para añadir pulse abajo.</string>
    <string name="text29">Para editar el nombre pulse arriba a la izquierda. Para editar las fechas pulse arriba a la derecha. Para editar descripcion pulse abajo a la izquierda. Para liminar el item pulse abajo a la derecha. Para volver atras pulse en el medio.</string>
    <string name="text291">Para editar el nombe pulse arriba a la izquierda. Para editar la habilidad pulse arriba a la izquierda. Para eliminar el item pulse abajo. PAra volver atras pulse en el medio. </string>
    <string name="text31"> Para guardar pulse abajo a la izquiera. Para cancelar pulse abajo a la derecha </string>
    <string name="text32">Para mas informacion pulse arriba. Para ir al siguiente empleo pulse abajo a la derecha. Para ir al anterior empleo pulse abajo a la izquierda </string>
    <string name="text33">Para aplicar al empleo pulse arriba. Para volver atras pulse abajo.  </string>
    <string name="text34"> Su postulaciones ha sido realizada con exito. Dentro de poco recibira respuesta del empleador. Para volver atras pulse abajo.  </string>
    <string name="text35"> Para ver sus postulaciones pendientes pulse arriba. Para ver sus postulaciones aceptadas pulse abajo. Para volver atras pulse en el medio.  </string>
    <string name="text36">Para ir a la siguiente postulacion pulse abajo a la derecha. Para ir a la anterior postulacion pulse abajo a la izquierda. PAra vovler atras pulse en el medio. </string>
    <string name="text37"> Lo sentimos. No tiene ninguna postulacion aceptada al momento. Para volver atras pulse abajo. </string>
    <string name="text38"> Para ir a configuraciones pulse arriba a la izquierda. Para ir a ayuda pulse arriba a la derecha. Para cerrar sesion pulse abajo a la izquierda. Para ir a acerca pulse abajo a la derecha. Para ir a inicio pulse en el medio. </string>
    <string name="text371"> Lo sentimos. No tiene ninguna postulacion pendiente al momento. Para volver atras pulse abajo. </string>

    <string name="text50">Para ir a accesibilidad pulse arriba a la izquierda. Para ir a idioma pulse arriba a la derecha. Para ir a uso de la app, pulse abajo a la izquierda. Para ir a privacidad, pulse abajo a la derecha. Para volver atras pulse en el medio </string>
    <string name="text51">Para activar la accesibilidad especial para personas con discapacidad intelectual pulse arriba. Para activar la configuracion default pulse abajo. PAra volver atras pulse en el medio. </string>
    <string name="text52">Si desea activar la configuracion especial para personas con discapacidad intelectual pulse arriba. Si quiere volver para atras, pulse abajo</string>
    <string name="text53">Si desea activar la configuracion default pulse arriba. Si quiere volver para atras, pulse abajo.</string>

</resources>
