<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/right_guideline"
        app:layout_constraintGuide_percent="1"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/top_guideline"
        app:layout_constraintGuide_percent="0"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/middle"
        app:layout_constraintGuide_percent=".5"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bottom2_guideline"
        app:layout_constraintGuide_percent="1"
        android:orientation="horizontal"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/large1_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/large2_guideline"
        app:layout_constraintGuide_percent="0.8"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mitad"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="vertical"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/ancho1_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ancho2_guideline"
        app:layout_constraintGuide_percent="0.65"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.75"
        android:background="@drawable/btn3"
        android:text="@string/Edit"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:onClick="editItem"
        app:layout_constraintBottom_toBottomOf="@+id/middle"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/mitad"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />

    <Button
        android:text="@string/Next"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btn2"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:alpha="0.75"
        android:background="@drawable/btn4"
        android:onClick="nextItem"
        app:layout_constraintBottom_toBottomOf="@+id/middle"
        app:layout_constraintLeft_toLeftOf="@+id/mitad"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="0.75"
        android:background="@drawable/btn4"
        android:text="@string/Back"
        android:onClick="anteriorItem"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/bottom2_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/left_guideline"
        app:layout_constraintRight_toRightOf="@+id/mitad"
        app:layout_constraintTop_toTopOf="@+id/middle" />

    <Button
        android:text="@string/Add"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/btn4"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:onClick="addItem"
        android:alpha="0.75"
        android:background="@drawable/btn3"
        app:layout_constraintBottom_toBottomOf="@+id/bottom2_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/mitad"
        app:layout_constraintRight_toRightOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/middle" />


    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/framePrueba"
        app:layout_constraintBottom_toTopOf="@+id/ancho2_guideline"
        app:layout_constraintLeft_toLeftOf="@+id/large1_guideline"
        app:layout_constraintRight_toRightOf="@+id/large2_guideline"
        app:layout_constraintTop_toTopOf="@id/ancho1_guideline"
        android:background="@drawable/et_style"
        android:onClick="editarCV"
        android:elevation="10dp">

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

