<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/grey"
    android:layout_height="wrap_content"
    android:fillViewport="false">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">



        <LinearLayout
            android:background="@color/white"
            android:layout_marginTop="65dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="70dp"
            android:onClick="editarCV"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:id="@+id/tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/CurriculumVitae"
                android:textSize="25dp"
                android:textStyle="bold"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView android:id="@+id/Educacion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/celeste"
                        android:text="@string/Education"
                        android:layout_marginLeft="15dp"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/icon1"
                        android:layout_marginLeft="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="7dp"
                        app:srcCompat="@drawable/ic_school_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="3dp">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutEducacion"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView android:id="@+id/Experiencia"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/celeste"
                        android:text="@string/JobExperience"
                        android:layout_marginLeft="15dp"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/icon2"
                        android:layout_marginLeft="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="7dp"
                        app:srcCompat="@drawable/ic_business_center_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="3dp">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutExperiencia"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView android:id="@+id/Skills"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/celeste"
                        android:text="@string/Skills"
                        android:layout_marginLeft="15dp"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/icon3"
                        android:layout_marginLeft="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="7dp"
                        app:srcCompat="@drawable/ic_star_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="3dp">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutSkills"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView android:id="@+id/Idioma"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/celeste"
                        android:text="@string/Language"
                        android:layout_marginLeft="15dp"
                        android:textSize="25dp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/icon4"
                        android:layout_marginLeft="5dp"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginTop="7dp"
                        app:srcCompat="@drawable/ic_chat_black_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:background="@color/black"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_height="3dp">
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/layoutIdioma"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </LinearLayout>

        </LinearLayout>



    </LinearLayout>
</ScrollView>